exports[`<NavItem /> renders correctly with default options 1`] = `
<li
  className="gwCKfy" />
`;

exports[`<NavItem /> renders correctly with icon class 1`] = `
<li
  className="gwCKfy">
  <a
    className="lndaRS"
    href="/a/link">
    <i
      className="fa fa-github koSwaT" />
    <span
      className="cCZXOi" />
  </a>
</li>
`;

exports[`<NavItem /> renders correctly with image 1`] = `
<li
  className="gwCKfy">
  <a
    className="lndaRS"
    href="/a/link">
    <img
      className="ldbpHN"
      src="/some/path" />
    <span
      className="cCZXOi" />
  </a>
</li>
`;

exports[`<NavItem /> renders correctly with theme 1`] = `
<li
  className="hpqKtZ" />
`;

exports[`<NavItem /> renders link correctly 1`] = `
<li
  className="gwCKfy">
  <a
    className="lndaRS"
    href="/a/link">
    <span
      className="cCZXOi" />
  </a>
</li>
`;
